improve paging, fix test